<resources>
    <string name="app_name">BusinessCard</string>
    <string name="label_business_cards">Cartões de visita</string>
    <string name="label_description_new_card">Novo cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Registro inserido com sucesso.</string>
    <string name="label_share_to">Compartilhar</string>
    <string name="label_insira_cor"><![CDATA[Insira a Cor no Campo Acima como Descrita na Caixa Silver ->]]></string>
</resources>